@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false


skinparam classAttributeIconSize 0

hide circle
hide methods




class Client{
    id
    name
    phoneNumber
    email
}

class "Unregistered User" as UU {}

class Announcement{
id
listingDate
comission
requestPrice
}


class Property{
propertyID
type
location
area
distanceCenter
propertyDescription
photograph
}

class Order{
value
}


UU "1" - "1"  Client : can become >
UU "1" -- "*" Announcement : displays >

Client "1" -- "*" Announcement : displays >
Property "1" -left- "1" Announcement: is the physical part of >

Client "1" -- "*" Order: submit >
Order "1" - "1" Announcement : is about >



@enduml